fix: another fix

--- a/src/scss/section/our-team.scss
+++ b/src/scss/section/our-team.scss
@@ -71,6 +71,11 @@
     &:hover path {
         fill: $red;
     }
+
+    a svg {
+        height: 39px;
+        width: 39px;
+    }
 }
 
 @media (max-width: 1250px) {
